Make sure content tile title overflow is hidden from view

--- a/sass/_dashboard.scss
+++ b/sass/_dashboard.scss
@@ -151,6 +151,7 @@
         padding-top: 3px;
         padding-right: 6px;
         width: calc(70% - #{$padding});
+        overflow: hidden;
     }
 
     .progress {
